syntax = "proto3";

package brewview.v1;

message RedirectRouteParam {
  string param_name = 1;
  string response_value_key = 2;
}
message CreateHandler {
  string title = 1;
  string redirect_route = 2;
  RedirectRouteParam redirect_route_param = 3;
  string route_name = 4;
  string endpoint = 5;
  string update_param_name = 6;
  string param_property_name = 7;
}

message UpdateHandler {
  string title = 1;
  string redirect_route = 2;
  string route_name = 3;
  string endpoint = 4;
  string find_endpoint = 5;
  string find_request_property = 6;
}
message DeleteRestoreHandler {
  string endpoint = 1;
  string request_property = 2;
}
message ImportHandler {
  string endpoint = 1;
  string import_template_link = 2;
}
message ErrorHandler {
  string constraint_name = 1;
  string field_name = 2;
}
message ListDataOptions {
  string title = 1;
  string description = 2;
  CreateHandler create_handler = 3;
  UpdateHandler update_handler = 4;
  DeleteRestoreHandler delete_restore_handler = 5;
  ImportHandler import_handler = 6;
}

message RowActions {
  UpdateHandler update_handler = 1;
  DeleteRestoreHandler delete_resore_handler = 2;
}

message SelectInputOption {
  int32 value = 1;
  string label = 2;
}
